<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_record"
        android:icon="@drawable/ic_record_wrapped"
        android:title="@string/ic_record" />

    <item
        android:id="@+id/navigation_pet"
        android:icon="@drawable/ic_pet"
        android:title="@string/ic_pet" />

    <item
        android:id="@+id/navigation_train"
        android:icon="@drawable/ic_train"
        android:title="@string/ic_train" />

    <item
        android:id="@+id/navigation_plus"
        android:icon="@drawable/ic_plus"
        android:title="@string/ic_plus" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account"
        android:title="@string/ic_account" />

</menu>
